fix(main.css): minor

--- a/asset/main.css
+++ b/asset/main.css
@@ -13,6 +13,10 @@ body {
   color: #fff;
 }
 
+h3 {
+  color: #383838;
+}
+
 a {
   -webkit-transition: 0.3s all ease;
   -o-transition: 0.3s all ease;
@@ -116,7 +120,7 @@ a:hover {
 .site-navbar .site-navigation .site-menu > li > a {
   padding: 10px 10px;
   letter-spacing: 0.05em;
-  color: rgba(0, 0, 0, 0.6);
+  color: #383838;
   text-decoration: none !important;
 }
 .site-navbar .site-navigation .site-menu > li > a:hover {
@@ -530,7 +534,6 @@ a:hover {
 
 .widget h3 {
   font-size: 20px;
-  color: #000;
   margin-bottom: 20px;
 }
 
@@ -584,7 +587,6 @@ a:hover {
 }
 .half .half-content h3 {
   font-size: 40px;
-  color: #000;
   margin-bottom: 30px;
 }
 
@@ -602,7 +604,6 @@ a:hover {
 }
 .service h3 {
   display: block;
-  color: #000;
   font-size: 20px;
   margin: 30px 0 10px 0;
 }
