--- a/asset/main.css
+++ b/asset/main.css
@@ -27,10 +27,6 @@ a:hover {
   text-decoration: none;
 }
 
-.text-black {
-  color: #000 !important;
-}
-
 .site-wrap:before {
   -webkit-transition: 0.3s all ease-in-out;
   -o-transition: 0.3s all ease-in-out;
@@ -45,47 +41,6 @@ a:hover {
   bottom: 0;
   opacity: 0;
   visibility: hidden;
-}
-
-.offcanvas-menu .site-wrap {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  z-index: 2;
-  overflow: hidden;
-}
-.offcanvas-menu .site-wrap:before {
-  opacity: 1;
-  visibility: visible;
-}
-
-.btn {
-  position: relative;
-  top: 0;
-}
-.btn:hover,
-.btn:active,
-.btn:focus {
-  outline: none;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-}
-.btn.btn-primary {
-  color: #fff;
-}
-
-.form-control {
-  height: 47px;
-}
-.form-control:active,
-.form-control:focus {
-  border-color: #434ba4;
-}
-.form-control:hover,
-.form-control:active,
-.form-control:focus {
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
 }
 
 .site-section + .site-section {
@@ -294,150 +249,6 @@ a:hover {
   opacity: 1;
 }
 
-.site-mobile-menu {
-  width: 300px;
-  position: fixed;
-  right: 0;
-  z-index: 2000;
-  padding-top: 20px;
-  background: #fff;
-  height: calc(100vh);
-  -webkit-transform: translateX(110%);
-  -ms-transform: translateX(110%);
-  transform: translateX(110%);
-  -webkit-box-shadow: -10px 0 20px -10px rgba(0, 0, 0, 0.1);
-  box-shadow: -10px 0 20px -10px rgba(0, 0, 0, 0.1);
-  -webkit-transition: 0.3s all ease-in-out;
-  -o-transition: 0.3s all ease-in-out;
-  transition: 0.3s all ease-in-out;
-}
-.offcanvas-menu .site-mobile-menu {
-  -webkit-transform: translateX(0%);
-  -ms-transform: translateX(0%);
-  transform: translateX(0%);
-}
-.site-mobile-menu .site-mobile-menu-header {
-  width: 100%;
-  float: left;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-.site-mobile-menu .site-mobile-menu-header .site-mobile-menu-close {
-  float: right;
-  margin-top: 8px;
-}
-.site-mobile-menu .site-mobile-menu-header .site-mobile-menu-close span {
-  font-size: 30px;
-  display: inline-block;
-  padding-left: 10px;
-  padding-right: 0px;
-  line-height: 1;
-  cursor: pointer;
-  -webkit-transition: 0.3s all ease;
-  -o-transition: 0.3s all ease;
-  transition: 0.3s all ease;
-}
-.site-mobile-menu .site-mobile-menu-header .site-mobile-menu-close span:hover {
-  color: #000;
-}
-.site-mobile-menu .site-mobile-menu-body {
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-  position: relative;
-  padding: 20px;
-  height: calc(100vh - 52px);
-  padding-bottom: 150px;
-}
-.site-mobile-menu .site-nav-wrap {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  position: relative;
-}
-.site-mobile-menu .site-nav-wrap a {
-  padding: 10px 20px;
-  display: block;
-  position: relative;
-  color: #000;
-}
-.site-mobile-menu .site-nav-wrap a:hover {
-  color: #434ba4;
-}
-.site-mobile-menu .site-nav-wrap li {
-  position: relative;
-  display: block;
-}
-.site-mobile-menu .site-nav-wrap li.active > a {
-  color: #fff;
-}
-.site-mobile-menu .site-nav-wrap .arrow-collapse {
-  position: absolute;
-  right: 0px;
-  top: 10px;
-  z-index: 20;
-  width: 36px;
-  height: 36px;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 50%;
-}
-.site-mobile-menu .site-nav-wrap .arrow-collapse:hover {
-  background: #f8f9fa;
-}
-.site-mobile-menu .site-nav-wrap .arrow-collapse:before {
-  font-size: 12px;
-  z-index: 20;
-  font-family: "icomoon";
-  content: "\f078";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%) rotate(-180deg);
-  -ms-transform: translate(-50%, -50%) rotate(-180deg);
-  transform: translate(-50%, -50%) rotate(-180deg);
-  -webkit-transition: 0.3s all ease;
-  -o-transition: 0.3s all ease;
-  transition: 0.3s all ease;
-}
-.site-mobile-menu .site-nav-wrap .arrow-collapse.collapsed:before {
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-.site-mobile-menu .site-nav-wrap > li {
-  display: block;
-  position: relative;
-  float: left;
-  width: 100%;
-}
-.site-mobile-menu .site-nav-wrap > li > a {
-  padding-left: 20px;
-  font-size: 20px;
-}
-.site-mobile-menu .site-nav-wrap > li > ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-.site-mobile-menu .site-nav-wrap > li > ul > li {
-  display: block;
-}
-.site-mobile-menu .site-nav-wrap > li > ul > li > a {
-  padding-left: 40px;
-  font-size: 16px;
-}
-.site-mobile-menu .site-nav-wrap > li > ul > li > ul {
-  padding: 0;
-  margin: 0;
-}
-.site-mobile-menu .site-nav-wrap > li > ul > li > ul > li {
-  display: block;
-}
-.site-mobile-menu .site-nav-wrap > li > ul > li > ul > li > a {
-  font-size: 16px;
-  padding-left: 60px;
-}
-
 /* Blocks */
 .site-hero {
   position: relative;
@@ -493,8 +304,8 @@ a:hover {
 }
 .site-hero .cta-box {
   position: absolute;
-  right: 8%;
-  max-width: 300px;
+  right: 5%;
+  max-width: 350px;
   padding: 30px 30px 70px 30px;
   border: 2px solid #000;
   color: #000;
@@ -622,5 +433,8 @@ a:hover {
   max-height: 1em;
 }
 #work .img {
-  background-color: #f3f3f3;
+  background-color: #f9f9f9;
+}
+.container {
+  max-width: 1100px;
 }
