--- a/asset/main.css
+++ b/asset/main.css
@@ -259,9 +259,6 @@ a:hover {
 .site-hero .container {
   position: relative;
 }
-.site-hero .bg-img {
-  height: 400px;
-}
 .site-hero {
   background-repeat: no-repeat;
   background-size: 100% 400px;
@@ -303,8 +300,7 @@ a:hover {
   display: none;
 }
 .site-hero .cta-box {
-  position: absolute;
-  right: 5%;
+  position: relative;
   max-width: 350px;
   padding: 30px 30px 70px 30px;
   border: 2px solid #000;
@@ -312,9 +308,6 @@ a:hover {
   background-color: #ffffffa0;
 }
 @media (max-width: 991.98px) {
-  .site-hero .bg-img {
-    height: 300px;
-  }
   .site-hero .cta-box {
     margin-top: 0;
     top: 0;
@@ -391,8 +384,11 @@ a:hover {
     height: 200px;
   }
 }
-.half .half-content {
+.half .half-content > p,
+.half .half-content > h3 {
   padding: 0 20px;
+}
+.half .half-content {
   height: auto;
 }
 .half .half-content h3 {
@@ -403,7 +399,7 @@ a:hover {
 .service {
   text-align: center;
   display: block;
-  padding-top: 1em;
+  padding: 0 20px;
 }
 .service .services-list li {
   color: #000;
@@ -437,4 +433,6 @@ a:hover {
 }
 .container {
   max-width: 1100px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
