--- a/asset/main.css
+++ b/asset/main.css
@@ -8,6 +8,14 @@ body {
   font-family: "Comfortaa", monospace;
 }
 
+/*
+#fcfcfc
+#3b3b3b
+#7a3b41
+#b93c47
+#f93d4e
+*/
+
 ::selection {
   background: #000;
   color: #fff;
@@ -21,7 +29,7 @@ a {
   -webkit-transition: 0.3s all ease;
   -o-transition: 0.3s all ease;
   transition: 0.3s all ease;
-  color: #f93d4eff;
+  color: #f93d4e;
 }
 a:hover {
   text-decoration: none;
@@ -75,11 +83,11 @@ a:hover {
 .site-navbar .site-navigation .site-menu > li > a {
   padding: 10px 10px;
   letter-spacing: 0.05em;
-  color: #383838;
+  color: #3b3b3b;
   text-decoration: none !important;
 }
 .site-navbar .site-navigation .site-menu > li > a:hover {
-  color: #434ba4;
+  color: #b93c47;
 }
 .site-navbar .site-navigation .site-menu > li:last-child {
   padding-right: 0;
@@ -296,7 +304,7 @@ a:hover {
   max-width: 350px;
   padding: 30px 30px 70px 30px;
   border: 2px solid #000;
-  color: #000;
+  color: #3b3b3b;
   background-color: #ffffffa0;
 }
 @media (max-width: 991.98px) {
@@ -323,6 +331,9 @@ a:hover {
 .footer {
   font-size: 14px;
   padding: 1em 0 0 0;
+}
+.footer a {
+  text-decoration: none
 }
 
 .widget h3 {
@@ -385,7 +396,7 @@ a:hover {
 }
 .service i {
   font-size: 50px;
-  color: #f93d4eff;
+  color: #b93c47;
 }
 .service h3 {
   display: block;
